--- a/css/styles.css
+++ b/css/styles.css
@@ -5,18 +5,24 @@ html, body, input, button, select, textarea {
 }
 
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background: #7f878f;
-    place-items: center;
+    background: #bdb3c1;
 }
 
 header {
-    background: #143d59;
+    background: #531570;
     color: white;
     text-align: center;
     padding: 1rem 0;
+}
+
+header a {
+  color: #c944d2;     
+  font-weight: 600;   
+  text-decoration: underline;
+}
+
+header a:hover {
+  color: #de44af;    
 }
 
 main {
@@ -27,10 +33,10 @@ main {
 
 #formSection {
     background: white;
-    padding: 1rem 1.25rem;
+    padding: 0.5rem 1.5rem;
     border-radius: 8px;
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    margin-bottom: 1.5rem;
+    margin-bottom: 1rem;
 }
 
 .form-group {
@@ -53,13 +59,18 @@ input[type="number"] {
 }
 
 button {
-    background: #198754;
+    background: #201987;
     color: white;
     border: none;
     padding: 0.5rem 1.2rem;
     border-radius: 4px;
     cursor: pointer;
     font-size: 1rem;
+}
+
+#searchButton {
+  display: block;
+  margin: 2rem auto 0;  
 }
 
 button:hover {
@@ -103,9 +114,21 @@ button:hover {
     color: #555;
 }
 
+#quakeForm {
+  width: 520px;
+  min-height: 390px;
+  background: #bd9dc6;  
+  border: 8px solid #000; 
+  border-radius: 16px;
+  padding: 24px;
+  box-shadow: 0 6px 18px rgba(0,0,0,.08);
+  overflow: auto;
+  margin: 2rem auto;
+}
+
 footer {
     text-align: center;
     padding: 1rem 0;
     font-size: 0.85rem;
-    color: #666;
+    color: #606060;
 }
